RuntimeStub's name lost with PrintFrameConverterAssembly

XMLWordPrintable

    • b11
    • generic
    • generic

        The RuntimeStub's name is lost when dumping C2's runtime stub with -XX:+PrintFrameConverterAssembly.
        However, it do exist when dumping with -XX:+PrintStubCode.
        It would be more friendly if the stub's name was dumped as well for JVM debuggers with -XX:+PrintFrameConverterAssembly.

        It can be fixed by
        ---------------------------------------
        diff -r 56089cf6152c src/hotspot/share/opto/output.cpp
        --- a/src/hotspot/share/opto/output.cpp Tue Feb 26 05:46:02 2019 -0800
        +++ b/src/hotspot/share/opto/output.cpp Thu Feb 28 19:52:40 2019 +0800
        @@ -1556,6 +1556,8 @@
               }
               if (method() != NULL) {
                 method()->print_metadata();
        + } else if (stub_name() != NULL) {
        + tty->print_cr("Generating RuntimeStub - %s", stub_name());
               }
               dump_asm(node_offsets, node_offset_limit);
               if (xtty != NULL) {
        ---------------------------------------

              Assignee:
              Jie Fu
              Reporter:
              Jie Fu
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: