8219919: RuntimeStub name lost with PrintFrameConverterAssembly

Reviewed-by: kvn